fix podcast quote line break on small screens

--- a/wp-content/themes/understrap-child/sass/theme/_child_theme_content.scss
+++ b/wp-content/themes/understrap-child/sass/theme/_child_theme_content.scss
@@ -447,6 +447,7 @@ body.people-template-default {
 	display:inline-block;
 	font-family: 'Playfair Display',serif !important;
 	font-size:48px;
+	line-height: 0;
 	vertical-align: -webkit-baseline-middle;
 }
 
